--- a/scenes/Makefile.windows
+++ b/scenes/Makefile.windows
@@ -3,11 +3,11 @@ BLENDER="C:\Program Files\Blender Foundation\Blender 3.3\blender.exe"
 DIST=../dist
 
 all : \
-    $(DIST)/hexapod.pnct \
-    $(DIST)/hexapod.scene \
+    $(DIST)/boss.pnct \
+    $(DIST)/boss.scene \
 
-$(DIST)/hexapod.scene : hexapod.blend export-scene.py
-    $(BLENDER) --background --python export-scene.py -- "hexapod.blend:Main" "$(DIST)/hexapod.scene"
+$(DIST)/boss.scene : boss.blend export-scene.py
+    $(BLENDER) --background --python export-scene.py -- "boss.blend:Main" "$(DIST)/boss.scene"
 
-$(DIST)/hexapod.pnct : hexapod.blend export-meshes.py
-    $(BLENDER) --background --python export-meshes.py -- "hexapod.blend:Main" "$(DIST)/hexapod.pnct" 
+$(DIST)/boss.pnct : boss.blend export-meshes.py
+    $(BLENDER) --background --python export-meshes.py -- "boss.blend:Main" "$(DIST)/boss.pnct" 
